# vectara

./: CHANGELOG.md  Dockerfile.alpha  compose.alpha.yml  main.py  pyproject.toml
.github/workflows/: release.yml
prisma/: schema.prisma
src/libs/agent/: index.py
